--- a/AnvilTool/AnvilTool.csproj
+++ b/AnvilTool/AnvilTool.csproj
@@ -37,6 +37,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -61,6 +63,7 @@
     <Compile Include="Entities\StoredData\Material.cs" />
     <Compile Include="Entities\StoredData\Product.cs" />
     <Compile Include="Entities\StoredData\Server.cs" />
+    <Compile Include="Helpers\TreeViewHelper.cs" />
     <Compile Include="Interfaces\IComputeShortest.cs" />
     <Compile Include="UserControls\MoveButton.xaml.cs">
       <DependentUpon>MoveButton.xaml</DependentUpon>
