--- a/AnvilTool/AnvilTool.csproj
+++ b/AnvilTool/AnvilTool.csproj
@@ -128,6 +128,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ResourceDictionary\Geometries.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="UserControls\ActionMove.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
