--- a/LIB_Library/LIB_Library.csproj
+++ b/LIB_Library/LIB_Library.csproj
@@ -38,6 +38,9 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="SQLiteEngine">
+      <HintPath>..\Assemblies\SQLiteEngine.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -75,6 +78,7 @@
     <Compile Include="ApplicationDependencies.cs" />
     <Compile Include="Constants\Cnst.cs" />
     <Compile Include="Constants\ViewNames.cs" />
+    <Compile Include="DbEngine\RecipesProxy.cs" />
     <Compile Include="Helpers\MessageDialogHelper.cs" />
     <Compile Include="Navigation\NavigationServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
