Imported MainWindow in HomeView

--- a/ApplicationProject/App.config
+++ b/ApplicationProject/App.config
@@ -54,8 +54,8 @@
 					<LoggerInstanceCollection xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 										      xmlns:xsd="http://www.w3.org/2001/XMLSchema">
 						<LogLocation>./logs</LogLocation><!--location of the log folder, if starts with ./ the path start from the location of the .exe file-->
-						<GroupByDay>true</GroupByDay><!--if true, create a sub-folder for each day-->
-						<PurgingDay>0</PurgingDay><!--Delete logs older than, 0 logs are not purged-->
+						<GroupByDay>false</GroupByDay><!--if true, create a sub-folder for each day-->
+						<PurgingDay>31</PurgingDay><!--Delete logs older than, 0 logs are not purged-->
 						<SystemLog_InstaceName>Application_main_log</SystemLog_InstaceName><!--Name of the log used instance as main system log-->
 						<LoggerInstances>
 							<LoggerInstance>
