Imported resource file

--- a/ApplicationProject/App.config
+++ b/ApplicationProject/App.config
@@ -1,12 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<sectionGroup name="userSettings"
-       type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-			<section name="AnvilTool.Properties.Settings"
-      type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      allowExeDefinition="MachineToLocalUser"
-      requirePermission="false" />
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="AnvilTool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
 	<startup>
@@ -51,8 +47,7 @@
 		FATAL = 5,
 		OFF = 7-->
 				<value>
-					<LoggerInstanceCollection xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-										      xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+					<LoggerInstanceCollection xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
 						<LogLocation>./logs</LogLocation><!--location of the log folder, if starts with ./ the path start from the location of the .exe file-->
 						<GroupByDay>false</GroupByDay><!--if true, create a sub-folder for each day-->
 						<PurgingDay>31</PurgingDay><!--Delete logs older than, 0 logs are not purged-->
